server api now only handle user management. all of user's data are stored in firestore. bug fixes